Quitando / de las rutas de las imagenes en los archivos header y footer

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,25 +1,25 @@
 
 <footer>
   <div class="footer__servirle"> 
-    <p class="line1">En </p><img src="/images/SVG/logoSertec.svg" alt="Logo de Sertec"/>
+    <p class="line1">En </p><img src="images/SVG/logoSertec.svg" alt="Logo de Sertec"/>
     <p class="line2">estamos para servirle, contáctenos.</p>
   </div>
   <div class="footer__header">
     <div class="footer__header__box">
       <div class="footer__header__box__phone">
-        <div class="footer__header-icon"><img src="/images/Iconos/phone.svg" alt="icono de teléfono fijo"/></div>
+        <div class="footer__header-icon"><img src="images/Iconos/phone.svg" alt="icono de teléfono fijo"/></div>
         <div class="footer__header__phone-num"> 
           <p>449 975-02-43 <br/>449 973-85-21</p>
         </div>
       </div>
       <div class="footer__header__box__cellphone">
-        <div class="footer__header-icon"> <img src="/images/Iconos/smartphone.svg" alt="ícono de un celular"/></div>
+        <div class="footer__header-icon"> <img src="images/Iconos/smartphone.svg" alt="ícono de un celular"/></div>
         <div class="footer__header__cellphone-num"> 
           <p>449 143-59-39</p>
         </div>
       </div>
       <div class="footer__header__box__email"> 
-        <div class="footer__header-icon"><img src="/images/Iconos/email.svg" alt="ícono de un email"/></div>
+        <div class="footer__header-icon"><img src="images/Iconos/email.svg" alt="ícono de un email"/></div>
         <div class="footer__header__email-txt"> 
           <p>sertec_ags@serteccalderas.com.mx</p>
         </div>
@@ -28,7 +28,7 @@
   </div>
   <div class="footer__box">
     <div class="footer__box__body">
-      <div class="footer__box__body-logo"><img src="/images/SVG/logoSertec.svg" alt="logotipo de SERTEC CALDERAS"/></div>
+      <div class="footer__box__body-logo"><img src="images/SVG/logoSertec.svg" alt="logotipo de SERTEC CALDERAS"/></div>
       <div class="footer__box__body-links">
         <h2>Enlaces Directos</h2>
         <ul> 
@@ -41,7 +41,7 @@
           <li><a href="/html/privacidad.html">POLÍTICA DE PRIVACIDAD </a></li>
         </ul>
       </div>
-      <div class="footer__box__body-address"> <img src="/images/SVG/address.svg" alt="ícono de ubicación"/>
+      <div class="footer__box__body-address"> <img src="images/SVG/address.svg" alt="ícono de ubicación"/>
         <p>Circuito Lacustre No. 309, Fracc. Villas del Cóbano C.P. 20150 Aguascalientes, Ags</p>
       </div>
       <div class="footer__box__body-schedule">
@@ -57,7 +57,7 @@
       </div>
       <div class="footer__box__body-socialmedia">
         <div class="footer__box__body-socialmedia__icon">
-          <h2>SÍGUENOS</h2><a href="https:/facebook.com"> <img src="/images/SVG/face.svg" alt="Ícono de facebook"/></a>
+          <h2>SÍGUENOS</h2><a href="https:/facebook.com"> <img src="images/SVG/face.svg" alt="Ícono de facebook"/></a>
         </div>
       </div>
     </div>
