--- a/components/header.pug
+++ b/components/header.pug
@@ -4,7 +4,7 @@ header
         a(href="/privacidad.html").menu-top__link Aviso de Privacidad
     nav.menu 
             section.menu__container 
-                img(src="/images/SVG/logoSertec.svg").menu__logo
+                img(src="images/SVG/logoSertec.svg").menu__logo
                 ul.menu__links 
                     li.menu__item 
                         a(href="index.html").menu__link INICIO
@@ -19,6 +19,6 @@ header
                     li.menu__item 
                         a(href="contacto.html").menu__link CONTACTO
                 .menu__hamburger 
-                    img(src="/images/Iconos/menu.svg" alt="icono de menu").menu__img  
+                    img(src="images/Iconos/menu.svg" alt="icono de menu").menu__img  
         
 
