--- a/components/header.html
+++ b/components/header.html
@@ -4,7 +4,7 @@
     <p>Bienvenido a SERTEC.</p><a class="menu-top__link" href="/privacidad.html">Aviso de Privacidad</a>
   </div>
   <nav class="menu"> 
-    <section class="menu__container"> <img class="menu__logo" src="/images/SVG/logoSertec.svg"/>
+    <section class="menu__container"> <img class="menu__logo" src="images/SVG/logoSertec.svg"/>
       <ul class="menu__links"> 
         <li class="menu__item"> <a class="menu__link" href="index.html">INICIO</a></li>
         <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUÍENES SOMOS?</a></li>
@@ -13,7 +13,7 @@
         <li class="menu__item"> <a class="menu__link" href="calderas.html">CALDERAS</a></li>
         <li class="menu__item"> <a class="menu__link" href="contacto.html">CONTACTO</a></li>
       </ul>
-      <div class="menu__hamburger"> <img class="menu__img" src="/images/Iconos/menu.svg" alt="icono de menu"/></div>
+      <div class="menu__hamburger"> <img class="menu__img" src="images/Iconos/menu.svg" alt="icono de menu"/></div>
     </section>
   </nav>
 </header>
