--- a/components/template.html
+++ b/components/template.html
@@ -106,6 +106,6 @@
         </div>
       </div>
     </footer>
-    <script src="/js/app-dist.js"></script>
+    <script src="js/app-dist.js"></script>
   </body>
 </html>
