--- a/css/style.less
+++ b/css/style.less
@@ -841,8 +841,9 @@
       align-items: center;
       .line1{
         grid-area: En;
-        text-align: left;
+        text-align: right;
         margin-bottom: 0;
+        margin-right: 5px;
       }
       img{
         grid-area: logo;
@@ -851,6 +852,7 @@
       }
       .line2{
         grid-area: txt;
+        text-align: center;
       }
       
     }
