--- a/css/style.less
+++ b/css/style.less
@@ -937,13 +937,17 @@
               }
               &-address{
                   text-align: center;
+                  h2{
+                    font-weight: @font-semibold;
+                    font-size: 2rem;
+                }
                   img{
                       width: 80px;
                       margin: 20px auto;
                   }
                   p{
                       font-size: @size-lg;
-                      width: 170px;
+                      width: 212px;
                       text-align: center;
                       margin: 5px auto;
                       font-weight: @font-light;
