--- a/components/footer.pug
+++ b/components/footer.pug
@@ -41,6 +41,7 @@ footer
                     li
                         a(href="/html/privacidad.html") POLÍTICA DE PRIVACIDAD 
             .footer__box__body-address 
+                h2 DIRECCIÓN
                 img(src="images/SVG/address.svg", alt="ícono de ubicación")
                 p Circuito Lacustre No. 309, Fracc. Villas del Cóbano C.P. 20150 Aguascalientes, Ags
 
