Cambios previos realizados

--- a/css/globals.less
+++ b/css/globals.less
@@ -48,7 +48,7 @@
           font-weight: @font-light;
           line-height: 4.9rem;
           strong{
-              border-top: 1px solid @color-secondary;
+              // border-top: 1px solid @color-secondary;
               font-size: 4.5rem;
               font-weight: @font-semibold;
 
