--- a/pug/contacto.pug
+++ b/pug/contacto.pug
@@ -7,7 +7,7 @@ block content
                     source(media="(min-width:1110px)" srcset="images/JPG/bannerContacto1920x600.jpg")
                     source(media="(min-width:768px)" srcset="images/JPG/bannerContacto834x537.jpg")
                     img(src="images/JPG/bannerContacto428x374.jpg", alt="Ingeniero con casco").img-fluid
-                p CONTACTO
+                p.banner-title CONTACTO
         p.title COMUNÍQUESE CON NOSOTROS
         .contacto__txt 
             p Queremos reiterarle nuestro deseo de atenderle y servirle como se merece, razón por la cual le pedimos que ante cualquier problema con su equipo o cualquier requerimiento en particular, no dude en ponerse en contacto con nosotros.
