--- a/pug/productos.pug
+++ b/pug/productos.pug
@@ -7,7 +7,7 @@ block content
                     source(media="(min-width:1110px)" srcset="images/JPG/bannerProductos1920x600.jpg")
                     source(media="(min-width:768px)" srcset="images/JPG/bannerProductos834x537.jpg")
                     img(src="images/JPG/bannerProductos428x374.jpg", alt="Manómetros").img-fluid
-                p PRODUCTOS
+                p.banner-title PRODUCTOS
         p.title NUESTROS PRODUCTOS
         .productos__brindar 
             p En #[strong SERVICIO TÉCNICO A CALDERAS] no sólo nos preocupamos por brindar servicios de calidad sino también en asegurarnos de encontrar el producto adecuado al ofrecer una amplia gama y variedad de instrumentación, válvulas, controles, refacciones y accesorios originales nacionales e importados que garantizarán la seguridad, precisión y el excelente funcionamiento de sus equipos. #[br] #[br]En nuestro catálogo se enlistan algunos ejemplos de los materiales y refacciones que manejamos.
