--- a/css/form.css
+++ b/css/form.css
@@ -13,7 +13,7 @@ body {
 .title {
   text-align: center;
   color: #000000;
-  font-size: 2.6rem;
+  font-size: 3rem;
   font-weight: 600;
   border-bottom: 5px solid #831d22;
   margin: 40px 0;
@@ -61,14 +61,19 @@ body {
   line-height: 4.9rem;
 }
 .section__header-content p strong {
-  border-top: 1px solid #831d22;
   font-size: 4.5rem;
   font-weight: 600;
 }
 .section__header-content p span {
   font-weight: 800;
 }
-
+.marcas__propiedad {
+  margin: 40px auto;
+}
+.marcas__propiedad p {
+  font-size: 1.8rem;
+  text-align: justify;
+}
 .contacto__form {
   font-family: 'Inter', sans-serif !important;
   display: -webkit-box;
