--- a/pug/calderas.pug
+++ b/pug/calderas.pug
@@ -7,7 +7,7 @@ block content
                     source(media="(min-width:1110px)" srcset="images/JPG/bannerCalderas1920x600.jpg")
                     source(media="(min-width:768px)" srcset="images/JPG/bannerCalderas834x537.jpg")
                     img(src="images/JPG/bannerCalderas428x374.jpg", alt="Ingeniero con casco").img-fluid
-                p CALDERAS
+                p.banner-title CALDERAS
         p.title VENTA DE CALDERAS
         .calderas__venta 
             p Venta de calderas industriales de la marca:
