Se generan los cambios en el texto de Nuestra historia, se hace el texto más grande

--- a/css/style.less
+++ b/css/style.less
@@ -483,7 +483,7 @@
           color: @color-white;
           padding: 30px;
           text-align: justify;
-          font-size: @size-lg;
+          font-size: @size-xxl;
 
         }
       }
