--- a/css/style.less
+++ b/css/style.less
@@ -778,6 +778,7 @@
             font-weight: @font-light;
             font-size: 1.8rem;
             margin: 30px;
+            text-align: justify;
 
         }
     }
@@ -818,6 +819,26 @@
                 }
             }
         }
+    }
+    &__convencer{
+      position: relative;
+      margin: 40px 0 40px 20px;
+      overflow: hidden;
+
+      p{
+        position: absolute;
+        color: @color-white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 0;
+        margin-left: 20px;
+        text-align: center;
+        width: auto;
+        height: 100%;
+        font-size: @size-lg;
+      
+      }
     }
   
   }
