--- a/pug/contacto.pug
+++ b/pug/contacto.pug
@@ -26,19 +26,9 @@ block content
                         input(type='email' placeholder="Email" name="email").form__container__input
                         textarea(placeholder="Mensaje" name="message").form__container__input.form__container__input--message
                         input(type='submit' value='Enviar').form__container__cta
-        //- .contacto__txt
-        //-     h1 COMUNÍCATE CON NOSOTROS
-        //-     p Queremos reiterarle nuestro deseo de atenderle y servirle como se merece, razón por la cual le pedimos que ante cualquier problema con su equipo o cualquier requerimiento en particular, no dude en ponerse en contacto con nosotros.
-        //- .contacto__box
-        //-     .contacto__iframe
-        //-         iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14806.615195345765!2d-102.2899575074242!3d21.9094033695804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8429ee48fd3d8823%3A0x8ce100b4fccc2b41!2sCto.%20Lacustre%20309%2C%20Villas%20del%20Cobano%2C%2020158%20Aguascalientes%2C%20Ags.!5e0!3m2!1ses-419!2smx!4v1649863573603!5m2!1ses-419!2smx"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade")
-        //-     .contacto__form
-        //-         form(action="https://formspree.io/f/meqndqgv" method="POST").form#myform
-        //-           action=""
-
-        //-             .form__container 
-        //-                 h2.form__title Contáctanos 
-        //-                 input(type='text' placeholder="Nombre").form__container__input
-        //-                 input(type='email' placeholder="Email" name="email").form__container__input
-        //-                 textarea(placeholder="Mensaje" name="message").form__container__input.form__container__input--message
-        //-                 input(type='submit' value='Enviar').form__container__cta
+        .contacto__convencer
+            picture
+                source(media="(min-width:1110px)" srcset="images/JPG/bannerContacto1920x600.jpg")
+                source(media="(min-width:768px)" srcset="images/JPG/bannerContacto834x537.jpg")
+                img(src="images/PNG/fondoContactenos2.png", alt="Ingeniero con casco").img-fluid
+            p Contáctenos y déjese convencer por nuestra amplia experiencia.
