--- a/css/style.less
+++ b/css/style.less
@@ -241,7 +241,7 @@
      &__contactenos{
       position: relative;
       display: flex;
-      height: 64px;
+      max-height: 85px;
       font-size: 1.8rem;
       margin-top: 10px;
       gap: 5px;
